# rt-ml-plt

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  arroyo.toml  compose.yml
scripts/: init-aws.sh  setup-snowflake.sh  test-pipeline.sh
seeds/snowflake/: setup.sql.template
src/: main.rs
src/pipelines/: fiat_offboard.rs  fraud_pipeline.sql  mod.rs
