[package]
name = "rt-ml-plt"
version = "0.1.0"
edition = "2021"

[dependencies]
arroyo = { git = "https://github.com/ArroyoSystems/arroyo.git", tag = "v0.12.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
